@@ -4,16 +4,18 @@ import com.example.bck.dto.LessonDTO;
 import com.example.bck.service.LessonService;
 import java.time.DayOfWeek;
 import java.time.format.DateTimeFormatter;
+import java.util.logging.Logger;
 import java.util.stream.Collectors;
 import javax.validation.Valid;
 import lombok.extern.slf4j.Slf4j;
+import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 
-@Slf4j
+//@Slf4j
 @RestController
 @RequestMapping("/lessons")
 public class LessonController {
@@ -34,14 +36,15 @@ public class LessonController {
   public ResponseEntity<?> createLesson(@Valid @RequestBody LessonDTO lessonDTO) {
     try {
       if (lessonDTO.getDuration() <= 0) {
-        log.warn("Attempt to create a lesson with non-positive duration");
+
+       // log.warning("Attempt to create a lesson with non-positive duration");
         return ResponseEntity.badRequest().body("Duration must be positive and greater than zero.");
       }
       LessonDTO createdLessonDTO = lessonService.save(lessonDTO);
-      log.info("Created a new lesson with id: {}", createdLessonDTO.getId());
+    //  log.info("Created a new lesson with id: {}", createdLessonDTO.getId());
       return new ResponseEntity<>(createdLessonDTO, HttpStatus.CREATED);
     } catch (RuntimeException ex) {
-      log.error("Error creating lesson: {}", ex.getMessage(), ex);
+    //  log.error("Error creating lesson: {}", ex.getMessage(), ex);
       return ResponseEntity.status(HttpStatus.CONFLICT).body(ex.getMessage());
     }
   }
@@ -60,14 +63,14 @@ public class LessonController {
   public ResponseEntity<?> updateLesson(@PathVariable Long id, @Valid @RequestBody LessonDTO lessonDTO) {
     try {
       if (lessonDTO.getDuration() <= 0) {
-        log.warn("Attempt to update a lesson with non-positive duration");
+        //log.warn("Attempt to update a lesson with non-positive duration");
         return ResponseEntity.badRequest().body("Duration must be positive and greater than zero.");
       }
       LessonDTO updatedLessonDTO = lessonService.update(id, lessonDTO);
-      log.info("Updated lesson with id: {}", id);
+    //  log.info("Updated lesson with id: {}", id);
       return ResponseEntity.ok(updatedLessonDTO);
     } catch (RuntimeException ex) {
-      log.error("Error updating lesson with id {}: {}", id, ex.getMessage(), ex);
+     // log.error("Error updating lesson with id {}: {}", id, ex.getMessage(), ex);
       return ResponseEntity.status(HttpStatus.NOT_FOUND).body(ex.getMessage());
     }
   }
@@ -93,7 +96,7 @@ public class LessonController {
             lessonDTO.getTime().format(timeFormatter),
             lessonDTO.getDiscipline().getName(),
             lessonDTO.getTeacher().getLastName()))
-        .collect(Collectors.toList());
+        .toList();
     return ResponseEntity.ok(formattedLessons);
   }
 
